--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,6 +1,6 @@
 :root {
   --accentBlue: #182141;
-  --accentOrange: #F4743B;
+  --accentOrange: #FFBF00;
   --greyBg: #F8F8F8;
   --white: white;
   --blueOpacity: rgba(24,33,65,0.5);
