--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,7 +1,7 @@
 :root {
   --accentBlue: #182141;
-  --accentOrange: #FFBF00;
+  --accentYellow: #FFBF00;
   --greyBg: #F8F8F8;
   --white: white;
-  --blueOpacity: rgba(24,33,65,0.5);
+  --textOpacity: rgba(24,33,65,0.5);
 }
