--- a/styles/sectionStyles/Work.css
+++ b/styles/sectionStyles/Work.css
@@ -1,24 +1,48 @@
 .Work {
   background-color: var(--greyBg);
+  padding: 2.1rem 0;
 }
 
 .Work__title {
   color: var(--accentYellow);
   text-transform: uppercase;
   font-size: 1.5rem;
+  width: 342px;
+  margin: 2.1rem auto;
 }
 
-.Work__subTitle ,
+.Work__project {
+  margin-bottom: 2.1rem;
+}
+
+.Work__subTitle,
 .Work__projectTitle {
- color: var(--accentBlue);
+  color: var(--accentBlue);
 }
 
 .Work__subTitle {
   font-size: 3.2rem;
+  width: 342px;
+  margin: 2.1rem auto;
+}
+.Work__projectImgContainer {
+  width: 342px;
+  height: 342px;
+  margin: 0 auto;
+}
+
+.Work__projectImg {
+  width: 100%;
+}
+
+.Work__projectContent {
+  width: 342px;
+  margin: 0 auto;
 }
 
 .Work__projectTitle {
   font-size: 2rem;
+  margin: 1rem 0;
 }
 
 .Work__projectInfo {
