--- a/styles/sectionStyles/Contact.css
+++ b/styles/sectionStyles/Contact.css
@@ -1,15 +1,67 @@
+.Contact {
+  padding: 2.1rem 0;
+}
+
 .Contact__title {
   color: var(--accentYellow);
   text-transform: uppercase;
   font-size: 1.5rem;
+  width: 342px;
+  margin: 2.1rem auto;
 }
 
 .Contact__subTitle {
   color: var(--accentBlue);
   font-size: 3.2rem;
+  width: 342px;
+  margin: 2.1rem auto;
+}
+
+.Contact__formContainer {
+  width: 342px;
+  margin: 0 auto;
+}
+
+.Contact__formField,
+.Contact__MessageField {
+  margin-bottom: 1rem;
 }
 
 .Contact__label {
   color: var(--textOpacity);
   font-size: 1.5rem;
+}
+
+.Contact__input {
+  margin-top: 1rem;
+  width: 342px;
+  height: 50px;
+  border: 3px solid var(--accentYellow);
+  border-radius: 0.6rem;
+}
+
+.Contact__mesage {
+  margin-top: 1rem;
+  width: 342px;
+  height: 150px;
+  border: 3px solid var(--accentYellow);
+  border-radius: 0.6rem;
+}
+
+.Contact__btn {
+  width: 342px;
+  padding: 1.5rem 3.5rem;
+  background-color: transparent;
+  border: 3px solid var(--accentYellow);
+  border-radius: 0.5rem;
+  font-size: 2rem;
+  color: var(--accentBlue);
+  cursor: pointer;
+  margin-top: 1rem;
+  transition: all ease 0.5s;
+}
+
+.Contact__btn:hover {
+  background-color: var(--accentYellow);
+  border-color: transparent;
 }
