--- a/styles/sectionStyles/Footer.css
+++ b/styles/sectionStyles/Footer.css
@@ -1,10 +1,16 @@
-.Footer{
+.Footer {
   background-color: var(--greyBg);
+  padding: 2.1rem 0;
 }
 
 .Footer__copyright {
   color: var(--accentBlue);
   font-size: 2rem;
+}
+
+.Footer__socialItem {
+  margin: 1rem;
+  list-style: none;
 }
 
 .Footer__socialLink {
