--- a/styles/sectionStyles/Header.css
+++ b/styles/sectionStyles/Header.css
@@ -1,30 +1,44 @@
 .Header {
-  background: linear-gradient(122deg, rgba(24,33,65,.70) 0%, rgba(24,33,65,0.70) 100%);;
+  height: 100vh;
+  background: linear-gradient(
+      122deg,
+      rgba(24, 33, 65, 0.7) 0%,
+      rgba(24, 33, 65, 0.7) 100%
+    ),
+    url("../../assets/header-img.png") center center no-repeat;
+  background-size: cover;
 }
 
 .Header__logo,
 .Header__navLink,
-.Header__title, 
+.Header__title,
 .Header__subTitle {
   color: var(--white);
 }
 
 .Header__logo {
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   font-weight: 700;
   font-style: italic;
   font-size: 3.2rem;
 }
 
+.Header__navItem {
+  margin: 1rem;
+  list-style: none;
+}
+
 .Header__navLink {
   text-decoration: none;
+  font-size: 2rem;
 }
 
 .Header__title {
   font-size: 4.8rem;
   line-height: 1.2;
-  letter-spacing: .8rem;
+  letter-spacing: 0.8rem;
   font-weight: 700;
+  padding: 2rem 0;
 }
 
 .Header__subTitle {
@@ -40,7 +54,6 @@
   font-size: 2rem;
 }
 
- 
 .Header__highlight {
   font-style: italic;
 }
