--- a/styles/sectionStyles/Contact.css
+++ b/styles/sectionStyles/Contact.css
@@ -1,24 +1,26 @@
 .Contact {
   padding: 2.1rem 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .Contact__title {
   color: var(--accentYellow);
   text-transform: uppercase;
   font-size: 1.5rem;
-  width: 342px;
+  width: 95%;
   margin: 2.1rem auto;
 }
 
 .Contact__subTitle {
   color: var(--accentBlue);
   font-size: 3.2rem;
-  width: 342px;
+  width: 95%;
   margin: 2.1rem auto;
 }
 
 .Contact__formContainer {
-  width: 342px;
+  width: 95%;
   margin: 0 auto;
 }
 
@@ -34,7 +36,7 @@
 
 .Contact__input {
   margin-top: 1rem;
-  width: 342px;
+  width: 100%;
   height: 50px;
   border: 3px solid var(--accentYellow);
   border-radius: 0.6rem;
@@ -42,14 +44,14 @@
 
 .Contact__mesage {
   margin-top: 1rem;
-  width: 342px;
+  width: 100%;
   height: 150px;
   border: 3px solid var(--accentYellow);
   border-radius: 0.6rem;
 }
 
 .Contact__btn {
-  width: 342px;
+  width: 100%;
   padding: 1.5rem 3.5rem;
   background-color: transparent;
   border: 3px solid var(--accentYellow);
