--- a/styles/sectionStyles/Footer.css
+++ b/styles/sectionStyles/Footer.css
@@ -29,3 +29,11 @@
   color: var(--accentYellow);
   font-size: 2rem;
 }
+
+
+@media (min-width: 1280px) {
+  .Footer__content {
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+}
