--- a/styles/sectionStyles/Header.css
+++ b/styles/sectionStyles/Header.css
@@ -118,3 +118,25 @@
     font-size: 3.5rem;
   }
 }
+
+@media (min-width: 1280px) {
+  .Header__logo {
+    font-size: 4rem;
+  }
+  
+  .Header__logo::after {
+    height: 22px;
+    width: 22px;
+    bottom: 17%;
+    right: -20%;
+  }
+
+  .Header__title{
+    font-size: 7.2rem;
+  }
+
+  .Header__subTitle{
+    font-size: 4rem;
+  }
+
+}
